Bug 265330 - Combo box does not show all the rows in tables and forms
Summary: Combo box does not show all the rows in tables and forms
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.4 rc1 (Calligra 2.4 rc1)
Platform: Debian stable Linux
: HI normal
Target Milestone: 3.0.2
Assignee: Jarosław Staniek
URL:
Keywords:
: 378550 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-03 20:09 UTC by Terry Hughes
Modified: 2017-04-24 11:24 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments
project file - not yet complete but shows the bug (88.00 KB, application/octet-stream)
2011-02-03 20:09 UTC, Terry Hughes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Terry Hughes 2011-02-03 20:09:08 UTC
Created attachment 56833 [details]
project file - not yet complete but shows the bug

Version:           1.1.3 (KOffice 1.6.3)
OS:                Linux

i set up a form with a combo box pointing to another table.
combo box set up in table design view also
when in data view on clicking on the combo box it only shows the first twelve rows and the last row is only half there.
the problem only appears if the look up table has a lot of fields.
the scroll bars work but come to a stop after row twelve.



Reproducible: Always

Steps to Reproduce:
set up table called part details , no primary key - is that a problem
can't add a primary key because there are many line number per order so that order numb is not unique
field order header number row source = sales orders, bound col = ordnumb, visible col = date ordered
field part numb row source = stock, bound col = partnumb, visible col = part desc.

set up form with combo box fields for order number and part number





Actual Results:  
order number box works ok
part number box only shows eleven and a half rows


Expected Results:  
part number box should show 15 rows

clue 
stock table with key part number has many columns
order table with key ordnumber has fewer columns
Comment 1 Terry Hughes 2011-02-03 20:18:42 UTC
this project was origonally written in delphi
Comment 2 Jarosław Staniek 2011-02-03 21:12:50 UTC
Thanks for the quality report, Terry. I am fan of such reports, it helps a lot!
Comment 3 Jarosław Staniek 2011-02-03 21:20:45 UTC
After trying the attached planajob.kexi file I have used enter_partdetail form, and apparently shows all the rows in the 'Order date' combo box (21). But this is Kexi 2.3. Should work in 2.2 too.

Are you able to try newer Kexi (2.3 recommended)?

I have found some bugs elsewhere however in Kexi 2.3, related to the combo boxes, including crashes.
Comment 4 Jarosław Staniek 2012-01-12 00:55:50 UTC
needs info...
Comment 5 Terry Hughes 2012-01-12 19:27:38 UTC
hello

thanks for reply
i have now upgraded to v 2.3.3 and the combo box problem at first sight seems to have been resolved but i need to test further so please leve the status as waiting for info till i have had the chance to check it further

terry

there seems to be another problem in v 2.3.3 with fields kexiDBAutofield but i will investigate further and set up a new bug report if required.
Comment 6 Jarosław Staniek 2012-01-12 21:04:11 UTC
Hi,
I think a bug can be set up for lack of autofields support if you are interested in helping this way. We dropped it in Kexi 2.x as not usable enough after porting. We plan replacements. The same applies to form layouts (another bug/wish can be filed).

More details:
http://community.kde.org/Kexi/Releases/Kexi_2.2#Forms
Comment 7 Terry Hughes 2012-01-13 11:42:36 UTC
hi

i have checked the combo box again

still a wee problem

open form enter-partdetails
click on combo box "part description"
14 rows displayed, last row is gunk
look at stock table
15 rows displayed, last row is more gunk, row 14 is gunk

clue- this may be a problem because the file planajob.kexi was produced using kexi v 1.1.3 i am now using kexi 2.3.3

thanks for comment on autofields and forms layout
is it worthwhile for me to file a bug report on these items ??

bye terry
Comment 8 Terry Hughes 2012-01-13 12:06:02 UTC
hi again

i have just looked at the release notes from the above web link.

lack of autofields does not bother me too much
same applies for forms layout - would be nice but not essential

project planajob is still under development.
it was originally written in turbo pascal for windows and has been in use in our electronics manufacturing plant for a long time. it was re-written in delphi for windows but we are hoping to convert to linux and kexi in due course.

bye terry
Comment 9 Jarosław Staniek 2012-01-13 12:23:29 UTC
OK so we are opening it.

Also thanks for sharing your use cases, as always really appreciated!

> thanks for comment on autofields and forms layout
> is it worthwhile for me to file a bug report on these items ??

Yes it is. We aim at backward compatibility.
Comment 10 Jarosław Staniek 2012-03-06 23:00:43 UTC
Terry, huge thanks for the test database. I am able to reproduce this bug. Assigning to me.

Feel invited to the Kexi forum at http://kexi-project.org/forum
Comment 11 Jarosław Staniek 2012-03-06 23:02:13 UTC
The bug still present in 2.4 RC 1.

It may be related to multi-column combo box contents.
Workaround: none so far.
Comment 12 Dimitrios T Tanis 2012-03-19 23:09:37 UTC
Same case as above different outcome. Simple table with a lookup column. The lookup table has more than 500 records. 
1) When opening either the table view or form view and trying to open the combo box dropdown, the popup box draws filled with black color. Even though record rows are not visible, clicking somewhere that would be eg the 3rd record, updates the combo box value correctly.

2) The combo box on a form when in data view, truncates text at about 88 pixels.
Comment 13 Jarosław Staniek 2014-02-08 21:44:13 UTC
Planned for post-2.8.0
Comment 14 clickoclunko 2014-04-20 01:25:13 UTC
(In reply to comment #11)
> The bug still present in 2.4 RC 1.
> 
> It may be related to multi-column combo box contents.
> Workaround: none so far.

i don't know this helps but
2 very simple tables
table 1                                                      table 2
pk-jobid         <----lookup --->              jobitemid                                       
custid                                                        serviceid
jobdate                                                     cost
invoiced <- checkbox
paid <-checkbox

it doesn't matter how many records are in table 1, the lookup only shows part of the first record.

i'm a total database noob but i have other projects that i've had no problem getting the lookup/combobox to work in those

i appreciate your time on the kexi project
Comment 15 clickoclunko 2015-05-16 15:48:34 UTC
this bug has returned....................when using the table view the dropdown no longer shows the lookup fields.
Comment 16 Jarosław Staniek 2015-05-17 11:09:15 UTC
@clickoclunko It can help if you send me a sample file.
Comment 17 Jarosław Staniek 2015-10-01 20:36:22 UTC
For the record: interesting that the attached file https://bugs.kde.org/show_bug.cgi?id=265330#attach_56833 (as it comes from Kexi 1.1) and contains forms with layouts. Layouts are not supported in 2.x and I see crashes. Good opportunity to fix them.

Thanks Terry.
If you have more files like that, they would be useful for testing and appreciated.
Comment 18 Jarosław Staniek 2017-04-08 11:55:42 UTC
*** Bug 378550 has been marked as a duplicate of this bug. ***
Comment 19 Jarosław Staniek 2017-04-24 11:19:03 UTC
Git commit 7e5f20b8356fe8e4c277b465b1009318e2f24071 by Jaroslaw Staniek.
Committed on 24/04/2017 at 11:18.
Pushed by staniek into branch '3.0'.

Fix geometry of the combo box

Summary:
Finally the geometry makes the combo usable also for small number of rows.

Note: navigating using keyboard (End, Home...) could be still improved but that's another topic.

FIXED-IN:3.0.2

Test Plan:
Try combo boxes of data table view and query designer.
Try combo boxes of forms.

Try with XDG_SESSION_DESKTOP=KDE and e.g. XDG_SESSION_DESKTOP=XFCE.

Reviewers: piggz

Reviewed By: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D5486

M  +11   -3    src/widget/tableview/kexicomboboxpopup.cpp

https://commits.kde.org/kexi/7e5f20b8356fe8e4c277b465b1009318e2f24071
Comment 20 Jarosław Staniek 2017-04-24 11:24:37 UTC
(changed the summary to also include tables since it's the same issue)