Fix geometry of the combo box

Summary:
Finally the geometry makes the combo usable also for small number of rows.

Note: navigating using keyboard (End, Home...) could be still improved but that's another topic.

FIXED-IN:3.0.2
BUG:265330

Test Plan:
Try combo boxes of data table view and query designer.
Try combo boxes of forms.

Try with XDG_SESSION_DESKTOP=KDE and e.g. XDG_SESSION_DESKTOP=XFCE.

Reviewers: piggz

Reviewed By: piggz

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D5486